# Shelf

./: .eslintrc  .eslintrc.json  LICENSE  README.md  next.config.js  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
.cargo/: config.toml
components/Inputs/: toggle-button.js
components/book/: book-cover.js  book-dashboard.js  book-item.js  dashboard.js  page-button.js
components/layout/: main-navigation.js  notification.js
components/settings/: setting-item-components.js  settings-item.js
components/shelf/: no-directory.js
context/: notification.js
lib/: SettingsItemEnum.js  SettingsTypeEnum.js  SettingsTypeReturn.js  regex.js
lib/notifications/: notification.js  notificationHook.js  notificationReducer.js  notificationStates.js
pages/: _app.js
pages/books/: index.js
pages/books/[book]/: index.js
pages/dashboard/: index.js
pages/dashboard/[book]/: index.js
pages/settings/: index.js
public-domain-books/: Death Comes for the Archbishop.epub  Invisible Man.epub  Journey to the Center of the Earth.epub  Men without Women.epub  Pride and Prejudice.epub  Strange case of Dr_ Jekyll and Mr_ Hyde.epub  The Big Four.epub
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240812213857_create_books_table.sql
src-tauri/src/: book.rs  book_item.rs  book_worker.rs  database.rs  lib.rs  main.rs  shelf.rs  xml.rs
src-tauri/src/book/: bookio.rs  mod.rs  util.rs
src-tauri/src/book/bookio/: mod.rs
src-tauri/src/book/util/: mod.rs
styles/: globals.css
