[package]
authors     = ["Tadgh Henry"]
default-run ="app"
description ="A place to store and read your books"
edition     ="2021"
license     =""
name        ="app"
repository  ="https://github.com/tadghh/Shelf/"
rust-version="1.72.1"
version     ="0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build= { version="1.5.0", features= [] }

[dependencies]
base64="*"
epub="*"
path-slash="*"
rand="*"
rayon="*"
regex="*"
serde= { version="1.0", features= ["derive"] }
serde_json="*"
sqlx= { version="0.8.0", features= ["runtime-tokio", "sqlite"] }
tauri= { version="1.5.1", features= [
	"dialog-open",
	"protocol-asset",
	"window-set-min-size",
	"window-set-size",
	"window-set-title",
] }
tauri-utils="1.5.0"
tokio="1.39.2"
xmltree="*"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default= ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol= ["tauri/custom-protocol"]
